fixed lading not looking well on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -34,6 +34,11 @@ section {
 
   padding-left: 100px;
   padding-right: 100px;
+
+  @media (max-width: 768px) {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
 
 .logo {
